<Desenho da Resolução> formatado

--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -154,15 +154,14 @@ Os requisitos mínimos deste tarbalho são saber utilizar Linux, bash e GAWK.
 \section{Algoritmos}
 Utilizamos as seguintes expressões regulares:
 \begin{enumerate}[i)]
-\item /\^{}{}msgid/
-\item /\^{}msgid[ \t]*""/
+\item /\^{}msgid/
 \item /\^{}"Language:/
-\item /<.*@.*>/ \&\& !/\^{}"Report/ \&\& !/FIRST/ \&\& !/\^{}"Language/
-\item /\^{}"Language-Team: *\\n"/
+\item /\textless.*@.*\textgreater/ \&\& !/\^{}"Report/ \&\& !/FIRST/ \&\& !/\^{}"Language/
+\item /\^{}"Language-Team: *$\backslash$n"/
 \item /\^{}"Language-Team:/
 \item /portugu[êe]se?s?/
-\item /\^{}msgid[ \t]*""/
-\item /\^{}msgstr[ \t]*""/
+\item /\^{}msgid[ $\backslash$t]*""/
+\item /\^{}msgstr[ $\backslash$t]*""/
 \item /\^{}msgid *"/
 \item /\^{}msgstr *"/
 \end{enumerate}
