já tem referências para os exercícios mas diz que não tem permissões. Continua a faltar as imagens. URGENTEgit add -Agit add -A

--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 %\usepackage[latin1]{inputenc}
 %\usepackage{url}
 \usepackage{enumerate}
@@ -181,37 +182,10 @@ Como perspetiva futura, e mencionado anteriormente, sugerimos a alteração dos 
 %\appendix
 \chapter{Código do Programa}
 
-%Lista-se a seguir o código \antlr~\cite{Par05} do programa \darius~\cite{NPH2016a} que foi desenvolvido.
-\begin{verbatim}
-public class Aula()
-  {
-    int n, m;
-    int max(int a, int b)
-      {
-       ......
-       return(max);
-      }
-  }
-\end{verbatim}
+\href{run:/home/user/Desktop/PLC/trabalhoP/ex/}{Script do exercício 2.5 a)}\\
+\href{run:/home/user/Desktop/PLC/trabalhoP/ex2/}{Script do exercício 2.5 b)}\\
+\href{run:/home/user/Desktop/PLC/trabalhoP/ex3/}{Script do exercício 2.5 c)}\\
 
-%\begin{verbatim}
-%llll sanjdb c kjnjcnjnjj mmmmmmmmmmmmm hhhhhhhhhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjjjjjjjjjjjjjj kkkkkkkkkkkkkkkkkk
-%      aqui deve aparecer o código do programa,
-%      tal como está formato no ficheiro-fonte "darius.java"
-%      caso indesejável $\varepsilon$
-%\end{verbatim}
 
-%\begin{lstlisting}[caption={Exemplo de uma Listagem}, label={lstExe1}]
-%llll sanjdb c kjnjcnjnjj mmmmmmmmmmmmm hhhhhhhhhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjjjjjjjjjjjjjj kkkkkkkkkkkkkkkkkk
-%      ou então aparecer aqui neste sítio um pouco de matematica $\$$
-%      como alternativa ao anterior.
-%      e aqui mais um teste $\varepsilon$
-%\end{lstlisting}
-
-%É ainda possível importar diretamente o ficheiro:
-%\lstinputlisting{plfiltrobase.l} %input de um ficheiro
-
-%\bibliographystyle{alpha}
-%\bibliography{relprojLayout}
 
 \end{document}
