--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -146,30 +146,36 @@ No último problema ignoramos o "\\n" e o "\#", devido ao LaTex, sustituindo por
 Uma alternativa seria modificar os ficheiros manualmente de modo a estarem no formato certo. Outra alternativa seria fazer inúmeros casos especiais.
 
 \section{Testes realizados e Resultados}
-Mostram-se a seguir alguns testes feitos (valores introduzidos) e
-os respectivos resultados obtidos:
+Mostram-se a seguir alguns testes feitos (valores introduzidos) e os respectivos resultados obtidos:
 
 
-%\begin{figure}[h]
-%\center
-%\includegraphics[scale=1]{exercicio1.png}
-%\caption{Exercicio 1}
-%\label{figura:Exercicio 1}
-%\end{figure}
+\begin{figure}[h]
+\center
+\includegraphics [width=9cm,height= 9cm]{exercicio1.png}
+\caption{Exercicio 1}
+\label{figura:Exercicio 1}
+\end{figure}
 
-%\begin{figure}[h]
-%\centering
-%\includegraphics[15,10]{exercicio2.png}
-%\caption{Exercicio 2}
-%\label{Exercicio 2}
-%\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=9cm,height= 9cm]{exercicio2.png}
+\caption{Exercicio 2}
+\label{Exercicio 2}
+\end{figure}
 
-%\begin{figure}[h]
-%\centering
-%\includegraphics{exercicio3.png}
-%\caption{Exercicio 3}
-%\label{Exercicio 3}
-%\end{figure}
+\begin{figure}[h]
+\centering
+\includegraphics[width=9cm,height= 9cm]{exercicio31.png}
+\caption{Exercicio 3-terminal}
+\label{Exercicio 3}
+\end{figure}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm,height= 12cm]{exercicio32.png}
+\caption{Exercicio 3-resultado}
+\label{Exercicio 3}
+\end{figure}
 
 
 \chapter{Conclusão} \label{concl}
