--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -9,20 +9,20 @@
 %\usepackage[latin1]{inputenc}
 %\usepackage{url}
 \usepackage{enumerate}
-%\usepackage{alltt}
-%\usepackage{fancyvrb}
-%\usepackage{listings}
+\usepackage{alltt}
+\usepackage{fancyvrb}
+\usepackage{listings}
 %LISTING - GENERAL
-%\lstset{
-%	basicstyle=\small,
-%	numbers=left,
-%	numberstyle=\tiny,
-%	numbersep=5pt,
-%	breaklines=true,
-%    frame=tB,
-%	mathescape=true,
-%	escapeinside={(*@}{@*)}
-%}
+\lstset{
+	basicstyle=\small,
+	numbers=left,
+	numberstyle=\tiny,
+	numbersep=5pt,
+	breaklines=true,
+    frame=tB,
+	mathescape=true,
+	escapeinside={(*@}{@*)}
+}
 
 %\lstset{ %
 %	language=Java,							% choose the language of the code
@@ -188,10 +188,8 @@ Como perspetiva futura, e mencionado anteriormente, sugerimos a alteração dos 
 %\appendix
 \chapter{Código do Programa}
 
-\href{run:/home/user/Desktop/PLC/trabalhoP/ex/}{Script do exercício 2.5 a)}\\
-\href{run:/home/user/Desktop/PLC/trabalhoP/ex2/}{Script do exercício 2.5 b)}\\
-\href{run:/home/user/Desktop/PLC/trabalhoP/ex3/}{Script do exercício 2.5 c)}\\
-
-
+O exercíco 2.5 a) está resolvido no ficheiro ex.\\
+O exercíco 2.5 b) está resolvido no ficheiro ex2.\\
+O exercíco 2.5 c) está resolvido no ficheiro ex3.\\
 
 \end{document}
