erro na capa corrigido

--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -73,7 +73,7 @@
 %%%%\input{LPgeneralDefintions}
 
 \title{Processamento de Linguagens e Compiladores 3º ano\\ \textbf{Expressões Regulares e GAWK}\\ Grupo 14}
-\author{Artur Queiroz\\ (A77136) \and  Rafael Fernandes\\ A78242 \and Rafaela Pinho\\ A77293  }
+\author{Artur Queiroz\\ A77136 \and  Rafael Fernandes\\ A78242 \and Rafaela Pinho\\ A77293 }
 \date{\today}
 
 \begin{document}
