--- a/trabalhoP/relatório.tex
+++ b/trabalhoP/relatório.tex
@@ -140,7 +140,7 @@ De um modo geral no trabalho, tivemos problemas com a formatação de alguns fic
 \subsection{Decisões}
 No problema 1 proposto no exercício, decidimos ignorar os "msgid" que não contivessem nenhuma mensagem ou que contivessem mais de uma tradução.Escolhemos como metadados mais importantes a linguagem, a percentagem de blocos, a quantidade de blocos por ficheiro, e quantos e quem são os tradutores. Decidimos também que a linguagem só está no "Language".\\
 No problema 2 decidimos utilizar a "Language-team" para definir a linguagem de tradução, pois nenhum dos ficheiros apresentava linguagem no campo"Language". Usamos uma matriz descritiva, sendo as linhas a frase em inglês e os descritivos das colunas a linguagem portuguesa ou francesa. Assumimos que os ficheiros apenas contêm traduções de português e francês e imprimimos unicamente aqueles que têm tradução nas duas linguas.\\
-No último problema ignoramos o "\\n" e o "\#", devido ao LaTex, sustituindo por " "(espaço) e por "--", respetivamente.
+No último problema ignoramos o "\textbackshlash n" e o "\#", devido ao LaTex, sustituindo por " "(espaço) e por "--", respetivamente.
 \subsection{Alternativas}
 Uma alternativa seria modificar os ficheiros manualmente de modo a estarem no formato certo. Outra alternativa seria fazer inúmeros casos especiais.
 
